# cairo-demos

./: .gitignore  ChangeLog  Makefile  Makefile.am  README  configure.ac
PS/: .gitignore  ChangeLog  Makefile  basket.c  write_png.h
X11/: .gitignore  ChangeLog  Makefile  Makefile.am  cairo-demo-xcb.c  cairo-demo.c  cairo-knockout.c  cairo-spline.c
cairo-candy/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  cairo-clock.c  cairo-clock.desktop  wobbly-zini.c  wobbly-zini.desktop
cairo-in-motion/: AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile  NEWS  README  TODO  cairo-in-motion.glade  cairo-in-motion.glade.test  cairo-samples.cpp  cairo-samples.h  main.cpp  sample-list-store.cpp  sample-list-store.h
cairo_snippets/: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  autogen.sh  cairo_snippets_gtk.c  cairo_snippets_html.c  cairo_snippets_pdf.c  cairo_snippets_ps.c  configure.ac
cairo_snippets/html/: cairo_snippets.css  footer.html_template  header.html_template  index.html_template
cairo_snippets/snippets/: arc.cairo  arc_negative.cairo  clip.cairo  clip_image.cairo  curve_rectangle.cairo  curve_to.cairo  fill_and_stroke.cairo  fill_and_stroke2.cairo  gradient.cairo  image.cairo  imagepattern.cairo  libsvg.cairo  operator_add.cairo  operator_atop.cairo  operator_atop_reverse.cairo  operator_in.cairo  operator_in_reverse.cairo  operator_out.cairo  operator_out_reverse.cairo  operator_over.cairo  operator_over_reverse.cairo  operator_saturate.cairo  operator_xor.cairo  path.cairo  set_line_cap.cairo  set_line_join.cairo  text.cairo  text_align_center.cairo  text_extents.cairo  xxx_clip_rectangle.cairo  xxx_dash.cairo  xxx_long_lines.cairo  xxx_multi_segment_caps.cairo  xxx_self_intersect.cairo
fbdev/: .gitignore  Makefile  cairo-fb.c
fixedpt/: README.md  meson.build  todo.md
fixedpt/src/: main.c  meson.build  utils.h
fixedpt/src/fixedpt/: fixedptc.h
gameoflife/: ChangeLog  Makefile
gtk/: .gitignore  ChangeLog  Makefile  README
gtk_slide/: .gitignore  COPYING  ChangeLog  Makefile  README  cairo_custom.c  cairo_custom.h  gtk_slide.c  puzzle.c  puzzle.h
kapow/: ChangeLog  Makefile
path_paint/: .gitignore  ChangeLog  Makefile  README.txt  path_paint.c
png/: .gitignore  ChangeLog  Makefile  Makefile.am  bevels.c  caps_joins.c  hering.c  outline.c  snapping.c  spiral.c  spline-pipelines.c  splines_tolerance.c  star_and_ring  star_and_ring.c  stars.c  text-rotate.c  text-rotate.ps  text.c
qcairo/: .gitignore  ChangeLog  README  controlwidgetbase.ui  main.cpp  mainwindow.cpp  mainwindow.h  qcairo.pro  qcairowidget.cpp  qcairowidget.h  qkapow.cpp  qkapow.h
quartz/: .gitignore  Info.plist  Makefile  QuartzCairoTest_Prefix.pch  fdface.c  fdface.h  fdhand.c  fdhand.h  fdlogo.c  fdlogo.h  main.c
quartz/English.lproj/: InfoPlist.strings
quartz/QuartzCairoTest.xcode/: project.pbxproj
sdl/: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  autogen.sh  configure.in  main.c
sproing/: .gitignore  COPYING  ChangeLog  Makefile  sproing.c
svgspacewar/: ChangeLog  Makefile
svgspacewar-cpp/: .gitignore  Makefile  README  svgspacewar.cpp
svgspacewar-cpp/docs/: index.html
tsetse/: .gitignore  ChangeLog  Makefile  tsetse.c
