headers = [
]

private_headers = [
]

# deps = [_dep]

# Internal configuration header
configure_file(output: 'config.h',
               configuration: conf)
)

sources = files([
  'main.c'
])

executable('FP-PERF-EXP', sources,
  dependencies : deps,
  include_directories : inc,
  install : true
fi
